<resources>
    <string name="app_name">Dream Garden</string>
    <string name="sign_in">Մուտք</string>
    <string name="email">Էլ․ հասցե</string>
    <string name="name">Անուն</string>
    <string name="phone">Հեռախոս</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="slogan"><![CDATA[Restaurant Cafe & Bar]]></string>
    <string name="menu">Մենյու</string>
    <string name="gallery">Տեսադարան</string>
    <string name="book_now">Սեղանի Ամրագրում</string>
    <string name="sales">Առաջարկներ</string>
    <string name="sign_out">Դուրս գալ</string>
    <string name="order">Զամբյուղ</string>
    <string name="guest">Guest</string>
    <string name="about_us">Մեր Մասին</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Մենյու</string>
    <string name="menu_gallery">Տեսադարան</string>
    <string name="menu_sales">Առաջարկներ</string>
    <string name="menu_food_list">Foods</string>
    <string name="best_details">Լավագույն առաջարկներ</string>
    <string name="popular_categories">Հանրաճանաչ կատեգորիաներ</string>
    <string name="best_deals">Լավագույն առաջարկներ</string>
    <string name="details">Food Details</string>
    <string name="address">Հասցե</string>
    <string name="empty">ԶԱՄԲՅՈՒՂԸ ԴԱՏԱՐԿ Է</string>

    <string name="price">Ընդհանուր գումար։ &#1423; </string>
    <string name="total_price">Գումարը: 0.0</string>
    <string name="delivery">Առաքում։ 1000&#1423;</string>
    <string name="service_fee">Սպասարկման վճար։ 10%</string>

    <string name="confirm">Հաստատել պատվերը</string>
    <string name="clear">Մաքրել զամբյուղը</string>
    <string name="date">dd/mm/yy</string>
    <string name="time">10:00-02:00</string>
    <string name="count">Հյուրերի քանակը</string>
    <string name="event">Միջոցառում</string>
    <string name="oder">սննդային ալերգիա, վեգան / բուսակեր, նախասիրություններ կամ այլ մանրամասներ</string>
    <string name="table">Սեղանի ընտրություն</string>
    <string name="send">Ամրագրել</string>
    <string name="cash">Վճարել կանխիկ</string>
    <string name="online">Վճարել օնլայն</string>
    <string name="payment">Վճարման տարբերակ</string>
    <string name="choice">Առաքում / Ռեստորան</string>
    <string name="serviceFee">Սպասարկում: 10%</string>
    <string name="table_location">Սեղանի համարը</string>
    <string name="home">Նշված հասցե</string>
    <string name="other">Այլ հասցե</string>

    <string name="total_text">Գումարը: </string>
    <string name="total_money">&#1423;</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>

    <string name="about1">
       Կանաչապատ տարածք, թափանցիկ վրաններ, ծառերից կախված ճոճանակներ, ողջ տարածքով ազատ շրջող բադեր ու նապաստակներ,
        բարեհամբույր սպասարկում, հարուստ ճաշացանկ և, իհարկե, մաքուր օդ։ Ահա այն հակիրճ ցանկը, որը կարող է բնութագրել Dream Garden-ը։
        Անվանումն արդեն հուշում է իր գաղափարի մասին, սակայն հաճելիորեն կզարմանաք, երբ ինքներդ մոտենաք այգուն։
        Այն գեղեցիկ է տարվա բոլոր եղանակներին։ Ունի հատուկ երեխաների համար առանձնացված Kids Zone․ փոքրիկ ֆերմա և խաղահրապարակ,
        որտեղ կարող եք կազմակերպել Ձեր երեխայի ամենակարևոր միջոցառումները։ <br>
        Dream Garden-ը հարմար է նաև հարսանյաց գեղեցիկ հանդիսությունների կազմակերպման համար, քանի որ հնարավորություն
        ունեք իրականացնել յուրօրինակ մտահղացումներ յուրահատուկ և անկրկնելի մթնոլորտում:</br>
     Dream Garden-ն ունի բավական մեծ ավտոկայանատեղի, ինչի շնորհիվ Դուք կարող եք չմտահոգվել Ձեր մեքենայի անվտանգության համար:</string>
    <string name="about">
        Dream Garden-ը այլընտրանքային ժամանցի վայր է Երևանում,</string>
  <string name="about3">
       </string>
    <string name="call">096-02-72-52</string>

</resources>