<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/LightGreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/group_place_holder"
        android:visibility="gone"
        android:id="@+id/rec_cart" />

    <ImageView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/empty" />

    <TextView
        android:id="@+id/empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:fontFamily="@font/arm"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:textSize="35sp"
        android:textColor="@color/DarkGreen"
        android:layout_centerHorizontal="true" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_place_holder"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_margin="8dp" >

            <TextView
                android:id="@+id/food_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boloragir"
                android:text="@string/price"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="22dp"
                android:layout_alignParentBottom="true" />

            <TextView
                android:id="@+id/service_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boloragir"
                android:text="@string/service_fee"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="22dp"
                android:layout_alignParentBottom="true" />

<!--            <TextView
                android:id="@+id/delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boloragir"
                android:text="@string/delivery"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="22dp"
                android:layout_alignParentBottom="true" />-->

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boloragir"
                android:text="@string/total_price"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="22sp"
                android:layout_alignParentBottom="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:fontFamily="@font/arm"
                android:id="@+id/confirm" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>